kubernetes/apps/casa/network/config/envoy-gateway/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend
spec:
  targetRefs:
    - &target
      group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
    - <<: *target
      name: main
    - <<: *target
      name: base
    - <<: *target
      name: dev
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  compression:
    - type: Brotli
    - type: Gzip
    - type: Zstd
